src/pages/Sign/style.scss
/* ... */
.membership-agreement-box {
    overflow: hidden;

    h1 {
        text-align: center;
        font-size: 25px;
        border-bottom: 2px solid var(--smooth-light-blue);
        padding-bottom: 10px;
    }

    .membership-terms-box {
        padding: 10px 20px 20px 15px;
        height: 500px;
        margin-top: 15px;
        overflow: scroll;
        overflow-x: hidden;

        @media (max-width:768px) {
            height: auto;

        }

        @include screenHeight(600px) {
            height: 300px;
        }

        h4 {
            margin: 20px 0px;
            font-size: 18px;

            &:nth-child(1) {
                margin-top: 0px;
            }
        }

        p {
            font-size: 13px;
            margin: 10px 0px;
            font-weight: 500;
            color: var(--text-dark-gray);
            text-align: justify;

            strong {
                font-weight: 700;
            }
        }
    }

}

// ------------------------------- Sign -------------------------------


.sign-in-general-container,
.sign-up-general-container,
.reset-password-general-container {
    @include flex-center(column, center, flex-start);
    gap: 22px;
    z-index: 2;
    padding: 20px 40px;
    height: 100%;

    @include screen(768px) {
        @include flex-center(column, center, center);
        padding: 15px;
    }

    @include screen(450px) {
        padding: 0px 20px;
    }

    img {
        width: 200px;
        user-select: none;
    }

    .title-container {
        h1 {
            font-size: 32px;
            font-weight: 700;
            margin-bottom: 10px;

            @include screen(768px) {
                text-align: center;
            }
        }

        p {
            color: var(--text-dark-gray);
            font-family: Montserrat;
            font-size: 15px;
            font-style: normal;
            font-weight: 600;

            @include screen(768px) {
                text-align: center;
            }
        }
    }

    .sign-buttons {
        width: 100%;
        margin-top: 22px;
        background-color: var(--blue);
        color: var(--text-white);
        padding: 8px 0px;
        border-radius: 8px;
        font-size: 15px;
        @include transition();

        &:hover {
            background-color: var(--hoverBlue);
        }
    }

    .change-sign-method-text {
        font-family: Montserrat;
        font-size: 13px;
        text-align: center;
        margin-top: 22px;
        color: var(--text-input-gray);

        a {
            padding-left: 7px;
            color: var(--blue);
        }
    }

    .error-message {
        color: var(--mingle-red);
        font-size: 13px;
        margin: -10px 0px;
    }
}

.sign-in-general-container {

    .method-buttons {
        @include flex-center(row, center);
        gap: 20px;

        button {
            @include flex-center(row, center);
            gap: 10px;
            width: 170px;
            padding: 7px 0px;
            border-radius: 8px;
            border: 2px solid #D8D8D8;
            background: var(--text-white);
            @include transition();

            &:hover {
                box-shadow: 0px 0px 20px 0px rgba(191, 191, 191, 0.381);
            }

            .icon {
                width: 22px;
                height: 22px;
                color: #1877F2;
            }

            span {
                color: #2E2E2E;
                font-family: Montserrat;
                font-size: 14px;
                font-weight: 600;
                color: var(--text-dark-gray);
            }
        }
    }

    .divider-container {
        @include flex-center(row, center, center);
        width: 100%;

        p {
            color: var(--text-input-gray);
            font-size: 13px;
            font-weight: 600;
            width: 190px;
            text-align: center;
        }

        span {
            height: 2px;
            width: 25%;
            background-color: #DDD;
        }
    }

    form {
        .remember-and-forgot-box {
            margin-top: 22px;
            @include flex-center(row, space-between, center);

            a {
                color: var(--blue);
                font-size: 13px;
                font-weight: 600;

            }
        }
    }
}

.sign-up-general-container {
    .membership-agreement-input {
        margin-top: 22px;
        display: flex;
        @include flex-center(row, center, center);

        p {
            font-size: 13px;
            font-weight: 500;
            color: var(--text-dark-gray);
            padding-top: 4px;

            @include screen(500px) {
                padding-top: 0;
            }

            strong {
                color: var(--blue);
                cursor: pointer;
            }
        }
    }
}

.reset-password-general-container {
    .cancel-btn {
        width: 100%;
        margin-top: 12px;
        background-color: var(--smooth-light-blue);
        color: var(--blue);
        padding: 8px 0px;
        border-radius: 8px;
        font-size: 15px;
        @include transition();

        &:hover {
            background-color: var(--smooth-blue-hover);
        }
    }
}

//--------------------------- Check Button Style ---------------------------

.checkbox-wrapper-46 input[type="checkbox"] {
    display: none;
    visibility: hidden;
}

.checkbox-wrapper-46 .cbx {
    margin: auto;
    -webkit-user-select: none;
    user-select: none;
    cursor: pointer;
}

.checkbox-wrapper-46 .cbx span {
    display: inline-block;
    vertical-align: middle;
    transform: translate3d(0, 0, 0);
}

.checkbox-wrapper-46 .cbx span:first-child {
    position: relative;
    width: 18px;
    height: 18px;
    border-radius: 3px;
    transform: scale(1);
    vertical-align: middle;
    border: 1px solid #9098A9;
    transition: all 0.2s ease;
}
/* ... */

